# customer-support-agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  originating-LICENSE
backend/: helper.py  main.py  memory.py  pyproject.toml
backend/routes/: agent.py  approval.py
backend/tests/: test_agent.py  test_approval.py  test_main.py
backend/workflow/: agent.py  approval.py  llm.py  tools.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx
frontend/app/approval/: page.tsx
n8n-slack-interactivity/: receive-interactivity-submission-from-slack-via-webhook.json  send-the-refund-approval-request-to-slack.json
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1
