[project]
name = "custom-support-agents-backend"
version = "0.1.0"
description = "custom-support-agents V1 backend — FastAPI app serving the static-exported frontend and (later) AI-driven document workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2,<2",
    "langchain>=1.3,<2",
    "langchain-core>=1.4,<2",
    "langgraph-checkpoint-sqlite>=3.1,<4",
    "aiosqlite>=0.20",
    "langchain-openai>=1.2,<2",
    "langchain-tavily>=0.2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.12",
    "litellm>=1.83.14",
    "pydantic>=2.12.5,<3",
    "fastapi-clerk-auth>=0.0.9",
]

[dependency-groups]
dev = [
    "httpx2>=0.28",
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
